# Implementierung-von-in-place-Mergesort-Algorithmen

./: .gitignore  README.md  license.txt  orangener Kasten.txt
Anforderungen/: anforderungen.tex
Ausarbeitung/: Einleitung.docx  Reinhardt Implementation.docx  Test+Others Implementation.docx  Test_Diagramme.xlsx  Test_Diagramme_zumAbgeben.xlsx  Testergebnisse.docx  ausarbeitung.tex  chen_beschreibung.docx  huang_langston_beschreibung.docx  literaturrecherche.docx  sort.bib
Chen/: CMakeLists.txt  chen.h
ChenAlgorithmus/: CMakeLists.txt  Wrappers.h  bufferMerge.h  chen.h  heapSort.h  main.cpp  naivmerge.cpp  naivmerge.h
Code/: CMakeLists.txt  Projekt-INF-Uni-Stuttgart.sln  Projekt-INF-Uni-Stuttgart.vcxproj  Projekt-INF-Uni-Stuttgart.vcxproj.filters  Wrappers.h  main.cpp  naivmerge.cpp  naivmerge.h  vectormain.cpp  wrapper.h
Code/Debug/: merge_test.lib
Code/merge_test/: merge_test.vcxproj  merge_test.vcxproj.filters  stdafx.cpp  unittest1.cpp
Huang_Langston/: CMakeLists.txt  huang_langston_merge.h  main.cpp
QuickXsort-master/: CMakeLists.txt  a.out  algorithm.h++  bottomupMerge.h++  grailsort.h++  grailsort_const_buffer.h++  grailsort_dynamic_buffer.h++  in_situ_merge.h++  makefile  quickmerge_worst_case.h  reinhardt_sort.h++  results.undersamplingcomptest.csv  sort_chen.h++  sort_huang.h++  sort_reinhardt.h++
Reinhardt/: CMakeLists.txt  RAI_shift.h  RAI_wrapper.h  inplace_merge.cpp  inplace_merge_shift.cpp  inplace_merge_shift.h  inplace_mergesort.cpp  inplace_mergesort_qsel.cpp  inplace_mergesort_qsel.h  inplace_mergesort_ring.cpp  inplace_mergesort_without_ring.cpp  iterator_ring.h  quickselect_step.cpp  quicksort_step.cpp  reinhardt.cpp  reinhardt.h  reinhardt_extrasort.cpp  reinhardt_extrasort.h  reinhardt_gapsort.cpp  reinhardt_gapsort_ring.cpp  reinhardt_inplace.cpp  reinhardt_inplace.h  reinhardt_merge.cpp  reinhardt_merge.h  reinhardt_merge_ring.cpp  reinhardt_merge_ring.h  reinhardt_swap.cpp  reinhardt_swap.h  reinhardt_swap_shift.cpp  reinhardt_swap_shift.h  vectormain.cpp
Reinhardt_Compare/: CMakeLists.txt  Compare.h  inplace_merge.cpp  inplace_merge.h  inplace_mergesort.cpp  inplace_mergesort.h  inplace_mergesort_qsel.cpp  inplace_mergesort_qsel.h  inplace_mergesort_qsort.cpp  quick_steps.cpp  quicksort_step.cpp  reinhardt_gapsort.cpp  reinhardt_merge.cpp  reinhardt_swap.cpp  reinhardt_swap.h  vectormain.cpp  wrapper.h
Standard_Mergesort/: CMakeLists.txt  iterative_mergesort.cpp  rec_mergesort_iter.cpp  rec_mergesort_reference.cpp  rec_mergesort_reference.h  vectormain.cpp
TestAndEvaluation/: CMakeLists.txt  bufferMerge.h  chen.h  heapSort.h  huang_langston_merge.h  main.cpp  main.h  structs.h
TestAndEvaluation/Reinhardt_Compare/: CMakeLists.txt  inplace_merge.cpp  inplace_merge.h  inplace_mergesort_qsel.cpp  inplace_mergesort_qsort.cpp  quicksort_step.cpp
Testergebnisse/TestAndEvaluation_five/: a.out  bufferMerge.h  chen.csv  main.h  other.csv  reinhardt.csv  standard.csv  structs.h
Testergebnisse/TestAndEvaluation_four/: a.out  chen.csv  main.h  other.csv  reinhardt.csv  standard.csv
Testergebnisse/TestAndEvaluation_four/Reinhardt_Compare/: quick_steps.cpp
Testergebnisse/TestAndEvaluation_one/: a.out  chen.csv  main.h  other.csv  reinhardt.csv  standard.csv
Testergebnisse/TestAndEvaluation_one/Reinhardt_Compare/: reinhardt_gapsort.cpp
Testergebnisse/TestAndEvaluation_three/: a.out  chen.csv  main.h  other.csv  reinhardt.csv  standard.csv  structs.h
Testergebnisse/TestAndEvaluation_two/: a.out  chen.csv  main.h  other.csv  reinhardt.csv  standard.csv
Testergebnisse/TestAndEvaluation_two/Reinhardt_Compare/: inplace_mergesort_qsort.h
VectorMerge/: CMakeLists.txt  vectormain.cpp  vectormerge.cpp  vectormerge.h  vectormergeIter.cpp  vectormergeIter.h  wrapper.h
WeitererAlgorithmus/: CMakeLists.txt  chen.h  huang_langston_merge.h  local_main.cpp  local_main_2.cpp  main.cpp  mergesort.cpp  mergesort.h
